--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,14 +21,43 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap"
         rel="stylesheet">
-        <style>
-            .poppins{
-                 font-family: "Poppins", sans-serif;
-            }
-        </style>
-        
+    <style>
+        .poppins {
+            font-family: "Poppins", sans-serif;
+        }
+    </style>
+
 </head>
-<body>
+
+<body class="poppins">
+    <header class="container mx-auto ">
+        <nav class="flex justify-between py-8 px-8">
+            <div class="flex gap-2 items-center">
+                <h1 class="p-2 bg-[#5D5FEF] text-white rounded-md font-bold">News</h1>
+                <h1 class="font-semibold text-[#5D5FEF]">Portal</h1>
+            </div>
+            <div class="flex items-center gap-5">
+                <a class="text-[#5D5FEF] font-semibold" href="">News</a>
+                <a class="text-[#A3A3A3] font-medium" href="">Blog</a>
+                <img src="Images/Avatar.png" alt="">
+            </div>
+        </nav>
+        <hr class="border-1 border-gray-400  mx-auto">
+
+        <div id="button-container ">
+            <div class="flex justify-center gap-8 my-10">
+                <button class="">Home</button>
+                <button class="">Breaking news</button>
+                <button class="">Regular news</button>
+                <button class="">International news</button>
+                <button class="">Culture</button>
+                <button class="">Arts</button>
+                <button class="">All news</button>
+            </div>
+        </div>
+    </header>
+
     
 </body>
+
 </html>
