--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 </head>
 
 <body class="poppins">
+    <!-- header start -->
     <header class="container mx-auto ">
         <nav class="flex justify-between py-8 px-8">
             <div class="flex gap-2 items-center">
@@ -45,7 +46,7 @@
         <hr class="border-1 border-gray-400  mx-auto">
 
         <div id="button-container ">
-            <div class="flex justify-center gap-8 my-10">
+            <div class="flex justify-between my-10 text-[#858585]">
                 <button class="">Home</button>
                 <button class="">Breaking news</button>
                 <button class="">Regular news</button>
@@ -53,11 +54,71 @@
                 <button class="">Culture</button>
                 <button class="">Arts</button>
                 <button class="">All news</button>
+                <button class="">Sports</button>
+                <button class="text-[#5D5FEF]">Entertainment</button>
             </div>
         </div>
     </header>
+    <!-- header end -->
 
-    
+    <!-- main container start -->
+
+    <main class="container mx-auto">
+        <section>
+            <div id="container_div" class="grid grid-cols-4 ">
+                <div class="col-span-1 p-5 border">
+                    <img class="w-full object-cover" src="Images/unsplash_EhTcC9sYXsw.png" alt="">
+                </div>
+                <div class=" border col-span-3 p-10 space-y-8">
+                    <h1 class="font-bold text-2xl text-[#121221]">The best fashion influencers to follow for
+                        sartorialinspiration</h1>
+
+                    <p class="text-[#949494] ">There’s no better time than now to familiarise yourself with the best
+                        online vintage clothing stores. If you want to
+                        overhaul your wardrobe for the long run, mixing vintage with high street clothing is the key to
+                        being trendy as well as
+                        sustainable.
+                    </p>
+
+                    <!-- conainer -->
+                    <div class="flex justify-between items-center">
+                        <!-- profile -->
+                        <div class="flex gap-2 items-center">
+                            <div>
+                                <img src="Images/Avatar.png" alt="">
+                            </div>
+                            <div>
+                                <p>Jane Cooper</p>
+                                <p>Jan 10, 2022</p>
+                            </div>
+                        </div>
+                        <!-- view -->
+                        <div class="flex gap-2 ">
+                            <i class="fa-regular fa-eye"></i>
+                            <p>1.5M</p>
+                        </div>
+                        <!-- rating -->
+                        <div>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+
+                        </div>
+                        <!-- button -->
+                        <div>
+                            <button class="btn-circle bg-slate-400 btn-outline"><i
+                                    class="fa-solid fa-arrow-right"></i></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <!-- main container end -->
+
 </body>
 
 </html>
