--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
 
     <!-- main container start -->
 
-    <main class="container mx-auto">
+    <main class="container mx-auto border rounded-md">
         <section>
-            <div id="container_div" class="grid grid-cols-4 ">
-                <div class="col-span-1 p-5 border">
+            <div id="container_div" class="grid grid-cols-4 bg-white rounded-xl">
+                <div class="col-span-1 p-5 ">
                     <img class="w-full object-cover" src="Images/unsplash_EhTcC9sYXsw.png" alt="">
                 </div>
-                <div class=" border col-span-3 p-10 space-y-8">
+                <div class="  col-span-3 p-10 space-y-8">
                     <h1 class="font-bold text-2xl text-[#121221]">The best fashion influencers to follow for
                         sartorialinspiration</h1>
 
@@ -93,7 +93,7 @@
                             </div>
                         </div>
                         <!-- view -->
-                        <div class="flex gap-2 ">
+                        <div class="flex gap-2 items-center">
                             <i class="fa-regular fa-eye"></i>
                             <p>1.5M</p>
                         </div>
