dynamicaly show button

--- a/index.html
+++ b/index.html
@@ -45,18 +45,8 @@
         </nav>
         <hr class="border-1 border-gray-400  mx-auto">
 
-        <div id="button-container ">
-            <div class="flex justify-between my-10 text-[#858585]">
-                <button class="">Home</button>
-                <button class="">Breaking news</button>
-                <button class="">Regular news</button>
-                <button class="">International news</button>
-                <button class="">Culture</button>
-                <button class="">Arts</button>
-                <button class="">All news</button>
-                <button class="">Sports</button>
-                <button class="text-[#5D5FEF]">Entertainment</button>
-            </div>
+        <div id="button-container" class="flex justify-between justify-between my-10 text-[#858585]">
+
         </div>
     </header>
     <!-- header end -->
@@ -118,7 +108,7 @@
     </main>
 
     <!-- main container end -->
-
+    <script src="indes.js"></script>
 </body>
 
 </html>
